2008-06-23  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotRoundIntegersRule.cs: New. Rule to detect cases where a
	rounding method (like Floor, Ceiling, Truncate or Round) is being
	used on an integer value.
	* Gendarme.Rules.Correctness.mdp: Add rule to MD project file.
	* Makefile.am: Add new rule and tests to the build.

2008-06-16  Sebastien Pouliot  <sebastien@ximian.com>

	* ReviewUselessControlFlowRule.cs: New. Rule to detect useless
	control flow in the method IL. They are either (potentially dangerous)
	typos or empty code block (e.g. forgotten, or not, TODO).
	* Gendarme.Rules.Correctness.mdp: Add rule to MD project file.
	* Makefile.am: Add new rule and tests to the build.

2008-06-15  Sebastien Pouliot  <sebastien@ximian.com>

	* ReviewDoubleAssignmentRule.cs: Handle same fields from different 
	instances.
	* ReviewUseOfModuloOneOnIntegersRule.cs: New. Rule to detect modulo
	1 (x % 0) on integral types. This always return 0 and is probably a typo.
	* Gendarme.Rules.Correctness.mdp: Add rule to MD project file.
	* Makefile.am: Add new rule and tests to the build.

2008-06-14  Sebastien Pouliot  <sebastien@ximian.com>

	* ReviewDoubleAssignmentRule.cs: New. Rule to detect double 
	assignments on fields or variables (e.g. x = x = 42;)
	* Gendarme.Rules.Correctness.mdp: Add rule to MD project file.
	* Makefile.am: Add new rule and tests to the build.

2008-04-27  Jb Evain  <jbevain@novell.com>

	* MethodCanBeMadeStaticRule.cs: Disable this rule
	when analyzing event callbacks.

2008-04-05  Sebastien Pouliot  <sebastien@ximian.com>

	* DontCompareWithNaNRule.cs, FloatComparisonRule.cs: mscorlib
	defines, not refer, to System.Single|Double (and the rule must
	apply to it too!)

2008-03-04  Sebastien Pouliot  <sebastien@ximian.com> 

	* DontCompareWithNaNRule.cs, FloatComparisonRule.cs: Don't 
	execute rules if the module does not use floating point types.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com>
