@@ -1,3 +1,11 @@
+2008-06-27  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* ReviewUseOfInt64BitsToDoubleRule.cs: New. Rule to check if the
+	BitConverter.Int64BitsToDouble is used in it's intended sense (i.e.
+	converting bits).
+	* Gendarme.Rules.Correctness.mdp: Add rule to MD project file.
+	* Makefile.am: Add new rule and tests to the build.
+
 2008-06-23  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* DoNotRoundIntegersRule.cs: New. Rule to detect cases where a
